# python-persistance-abstraction-example

./: .gitignore  Makefile  alembic.ini  pyproject.toml  readme.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 5aadb6e74421_initial_revision.py
decoupled_repositories_example/database/: models.py  repository.py
decoupled_repositories_example/logic/: user_logic.py
entrypoints/: cli.py
entrypoints/api/: app.py  controller.py  create_app.py  models.py
example_project/database/: models.py  repository.py
example_project/database/migration/: environment_context.py  migration.py
example_project/database/repositories/: __init__.py  user_repository.py
example_project/database_migration/: __init__.py  migration.py
example_project/logic/: __init__.py  user_logic.py
example_project/repositories/: models.py  repository.py  user_repository.py
scripts/: cli.py
tests/: test_database.py  test_decoupled_repositories_example.py  test_logic.py
